# languages_programming

./: README.md
LPLab16/: CMakeLists.txt  LPLab_16.sln
LPLab16/LPLab16/: DP.cpp  DP.h  Error.cpp  GRB.cpp  IT.cpp  IT.h  In.cpp  In.h  LPLab16.vcxproj  LPLab16.vcxproj.filters  LP_14.cpp  LP_16.cpp  LP_LAB16.vcxproj  LP_LAB16.vcxproj.filters  LT.cpp  LT.h  Log.cpp  MFST.h  PN.cpp  file.id.txt  file.txt  stdafx.h
LPLab16/LPLab16/Debug/: LP_LAB16.exe.recipe  dp.obj.enc  error.obj.enc  in.obj.enc  it.obj.enc  log.obj.enc  lp_16.obj.enc  lt.obj.enc  parm.obj.enc  pn.obj.enc  vc142.idb
LPLab16/LPLab16/Debug/LP_LAB16.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LP_LAB16.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
LPLab16/LPLab16/x64/Debug/: LPLab16.exe.recipe  error.new.obj.enc  vc142.idb
LPLab16/LPLab16/x64/Debug/LPLab16.tlog/: CL.read.1.tlog  (+6 more)
LPLab16/Project/: PolishNatation.cpp  Project.vcxproj.filters
LPLab16/generator_graphs/: generator_graphs.cpp  generator_graphs.h  generator_graphs.vcxproj  generator_graphs.vcxproj.filters  graphs.h  graphs.txt  graphs_in.txt
LPLab16/generator_graphs/Debug/: CodeAnalysisResultManifest.txt  generator_graphs.exe.recipe  vc142.idb
LPLab16/generator_graphs/Debug/generator_graphs.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  generator_graphs.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
LPLab16/generator_graphs/x64/Debug/: generator_graphs.exe.recipe  vc142.idb
LPLab16/x64/Debug/: LPLab13.ilk  LPLab14.ilk  LPLab16.ilk  generator_graphs.ilk
(+175 files in other folders)
